# cacten

./: .gitignore  README.md  pyproject.toml
.cacten/: sources-example.toml
docs/: architecture.md  brainstorm.md  requirements.md  systems-design.md  tasks.md
docs/planning/: README.md  code-ingestion-plan.md  cross-encoder-reranker-plan.md  eval-integration-design.md  incremental-ingest-plan.md  project-local-manifest-ingestion.md  project-plan.md  tasks.md
src/cacten/: __init__.py  cli.py  config.py  embeddings.py  loaders.py  manifest.py  models.py  pipeline.py  rerank.py  retrieval.py  server.py  session_log.py  splitter.py  store.py  versions.py
tests/: test_cli.py  test_config.py  test_embeddings.py  test_embeddings_dense.py  test_loaders.py  test_loaders_extra.py  test_manifest.py  test_pipeline.py  test_rerank.py  test_retrieval_extra.py  test_server.py  test_session_log.py  test_splitter.py  test_store.py  test_versions.py
